Aula 17
É uma parada boa a parte do Assume que ajuda mesmo para deixar o teste mais correto